--- a/static/main.css
+++ b/static/main.css
@@ -1,10 +1,24 @@
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,600);
 
 body {
+ min-width:500px;
  background-color: #80FF9F;
  margin:0px;
  text-align:center;
  font-family: "Exo 2";
+}
+
+table {
+ margin: 0 auto;
+}
+
+tr:first-child {
+ text-align:center;
+ color:red;
+}
+
+td:first-child {
+ text-align:center;
 }
 
 form > * {
@@ -22,25 +36,72 @@ a, a:visited {
 }
 
 a:hover {
- background-color:white;
+ background-color:#eee;
 }
 
+#earthLogo {
+ margin:0px;
+ 
+}
+
+.headerMask {
+ position:absolute;
+ top:0px;
+ left:0px;
+ width:100%;
+ height:100%;
+ z-index:10;
+}
+
+.innerHeader {
+ width:500px;
+ padding-top:30px;
+ margin: 0 auto;
+}
 
 .header {
  cursor:default;
-
+ position:relative;
  font-size:44px;
  font-weight:bold;
+ text-align:center;
  letter-spacing:8px;
  word-spacing:10px;
  margin-bottom:10px;
- padding:30px;  
+ height:440px;
  background-color: #42FF71;
 
  user-select:none;
  -webkit-user-select:none;
  -moz-user-select:none;
 }
+
+/* # # # # # # # # # # */
+/* TODO: Needs to be finished. */
+.dataHeader{
+ font-size:24px;
+ font-weight:bold;
+ margin-top:10px;
+ margin-bottom:5px;
+ border-radius: 2px;
+ padding:10px;
+ background-color: #42FF71;
+}
+
+.edgeSet {
+ font-size:10px;
+ background-color:#eee;
+ border-radius:2px;
+ text-align:left;
+ margin-bottom:15px;
+}
+
+.number {
+ font-weight:bold;
+ margin-right:10px;
+}
+
+/* # # # # # # # # # # */
 
 #dataContainer {
  margin:20px;
@@ -54,4 +115,8 @@ a:hover {
 
 #copyrightContainer {
  width:100%;
+
+ user-select:none;
+ -webkit-user-select:none;
+ -moz-user-select:none;
 }
