--- a/templates/main.html
+++ b/templates/main.html
@@ -7,24 +7,53 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}main.css" />
 
 <body>
-<div class="header">URL Cartographer</div>
+<div class="header">
+ <div class="innerHeader">
+ <img id="earthLogo" src="{{STATIC_URL}}earth_logo.png">
+ <span>URL</span><div>Cartographer</div>
+ </div>
+ <div class="headerMask"> 
+ </div>
+</div>
 
 
 <form action="/query/" method="post"> {% csrf_token %}
-<input type="text" name="url" />
-<input type="submit" value="Gather" />
+<input type="text" name="url" id="formText"/>
+<input type="submit" value="Gather" id="formSubmit"/>
 </form>
 
 <div id="dataContainer">
-{% if data %}
- {% for url, number in quantity.items %}
-   <div><span>{{ url }}</span> <span>{{ number }}</span></div>
+{% if url %}
+ <div>Map from <a href="{{url}}">"{{url}}"</a></div>
+
+ <div class="dataHeader"> Occurrences of URLs:</div>
+ <table>
+  <tr><td>Number</td> <td>URL</td></tr>
+  {% for url, number in quantity.items %}
+   <tr><td class="number">{{ number }}</td> <td>{{ url }}</td></tr>
+  {% endfor %}
+ </table>
+
+ <div class="dataHeader"> URL Edges:</div>
+ {% for url, links in edges.items %}
+   <div>{{ url }}</div>
+   <div class="edgeSet"> 
+   {% for link in links %} 
+    <div>{{ link }}</div>
+   {% endfor %}
+   </div>
  {% endfor %}
+
 {% else %}
-No query...
+ No query...
 {% endif %}
 </div>
 
 <div id="copyrightContainer">&#169;2014 <a href="http://caseyfalk.com">Casey Falk</a></div>
 </body>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.js"></script>
+<script src="{{ STATIC_URL }}ribbon.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}main.js" type="text/javascript"></script>
+
 </html>
