Added UWSGI Configuration and error pages.

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
 
 </head>
 
+<link rel="shortcut icon" type="image/x-icon" href="{{STATIC_URL}}favicon.ico">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}main.css" />
 
 <body>
